@@ -16,11 +16,7 @@
 $Id$
 """
 
-__docformat__ = "reStructuredText"
+import zope.app.preference
+import zope.app.wsgi.testlayer
 
-import os
-from zope.app.testing.functional import ZCMLLayer
-
-PreferencesLayer = ZCMLLayer(
-    os.path.join(os.path.split(__file__)[0], 'ftesting.zcml'),
-    __name__, 'PreferencesLayer', allow_teardown=True)
+PreferencesLayer = zope.app.wsgi.testlayer.BrowserLayer(zope.app.preference)
